Resolution appartion d image

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             </div>
           </div>
           <div class="image-container">
-            <img src="/src/image/pink-archi.png" alt="architecture-pink" class="bloc1-image">
+            <img src="src/image/pink-archi.png" alt="architecture-pink" class="bloc1-image">
          </div> 
     </div>
 
@@ -52,7 +52,7 @@
         <div class="bloc bloc2"> 
           <div class="container-bloc2">
             <div class="bloc2-hero-image">
-              <img src="/src/image/BUSINESSMAN.png" alt="BUSINESSMAN" class="bloc2-image">
+              <img src="src/image/BUSINESSMAN.png" alt="BUSINESSMAN" class="bloc2-image">
               <div class="bloc2-image-background"></div>
               <i class="fas fa-long-arrow-alt-right icone-bloc2"></i>
             </div>
@@ -162,12 +162,12 @@
                     </div>
                   </div>
                   <div class="bloc4-image-container">
-                    <img src="/src/image/Webp.net-resizeimage (1).jpg" alt="architecture-pink" class="bloc4-image">
+                    <img src="src/image/Webp.net-resizeimage (1).jpg" alt="architecture-pink" class="bloc4-image">
                  </div> 
                  <div class="bloc4-focus-pic">
                    <div class="bloc4-focus-pic-contain">
                      <p class="bloc4-zoom-title">O2</p>
-                     <img src="/src/image/30-Must-Know-Women-Architects-by-Azure-Hero-1600x900.jpg" alt="" class="bloc4-zoom-pic">
+                     <img src="src/image/30-Must-Know-Women-Architects-by-Azure-Hero-1600x900.jpg" alt="" class="bloc4-zoom-pic">
                          <div class="bloc4-zoom-description">
                            <p class="bloc4-zoom-description-1">Wildans's House</p>
                            <p class="bloc4-zoom-description-2">Thailand</p>
@@ -202,7 +202,7 @@
               </div>
             </div>
             <div class="bloc5-container-image">
-              <img src="/src/image/ACDF-Architecture-Realisation-Centre-DArt-Diane-Dufresne-03.jpg" alt="architecture-pink" class="bloc5-image">
+              <img src="src/image/ACDF-Architecture-Realisation-Centre-DArt-Diane-Dufresne-03.jpg" alt="architecture-pink" class="bloc5-image">
             </div>
           </div>
         </div>
