Changement Text email-form bloc 5

--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
                 <i class="fas fa-long-arrow-alt-down icone-bloc5"></i>
                 <p class="bloc5-hero-main-title">We are happy, if you are interested in our project</p>
                <div class="bloc5-form-area">
-                  <textarea type="email" placeholder="Email" class="bloc5-form-1">jeses</textarea>
+                  <textarea type="email" placeholder="Email" class="bloc5-form-1"></textarea>
                   <textarea type="text" placeholder="Message" class="bloc5-form-2"></textarea>
                </div>
                 <div class="button button--mimas color-button-1" id="bloc5-button"><span>SEND MESSAGE</span></div>
