Correction au niveau des buttons

--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
               </div>
                 <ul class="list-nav-2">
                   <li class="list-nav-bar-2">
-                    <div class="button button--mimas color-button-1" id="color-button-1"><span>SIGN IN</span></div>
+                    <div class="button button--mimas button-border"><span>SIGN IN</span></div>
                   
-                    <div class="button button--mimas" id="color-button-2"><span>SIGN UP</span></div>
+                    <div class="button button--mimas button-border"><span>SIGN UP</span></div>
                   </li>
                 </ul> 
             </nav>
@@ -158,7 +158,7 @@
                       </div>
                     </div>
                     <div>
-                      <div class="button button--mimas bloc4-hero-button bloc4-button" id="button-4"><span>VIEW ALL</span></div>  
+                      <div class="button button--mimas bloc4-hero-button bloc4-button button-border" id="button-4"><span>VIEW ALL</span></div>  
                     </div>
                   </div>
                   <div class="bloc4-image-container">
